# openworld

./: .dockerignore  .gitignore  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  World Models_ Learned vs. Symbolic.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
_template/: .gitignore  README.md  main.tex  numbers.tex  refs.bib
bench/: README.md  fetch_results.sh  run_arc_seeds.sh  run_crossworld.sh  run_cwladder.sh  run_e80_startup.sh  run_e85.sh  run_e86_arc3.sh  run_e86_claude.sh  run_e86_gpu.sh  run_e86b_qwen.sh  run_e91_grpo.sh  run_remote.sh  run_worldtime.sh  validate_minigrid.py  verify_arc3_solves.sh
bench/competitors/: collect.py  run_dreamerv3.sh  run_poeworld.sh  run_tdmpc2.sh  run_vjepa.sh
bench/gcp/: config.sh  provision.sh  run.sh  teardown.sh
contributions/fable_market_v2/: FABLE_MARKET_V2_REPORT.md  README.md
contributions/researchy_A001_strategy_deepdive/: CONCISENESS_PROPOSAL.md  PAPER_FEEDBACK.md  README.md  deeper_analysis.py  summary.json  takeaways.txt
contributions/researchy_market_worldmodel/: MULTIPLE_TESTING_LEDGER.md  README.md  backtest.py  build_splits.py  download_data.py  download_sentiment.py  predictions.json  run_experiment.py  verify.py
datasets/fivethirtyeight/: README.md
datasets/openworld-audio/: make_speech.py
datasets/openworld-coding/: CARD.md  sft_train.jsonl
datasets/openworld-contextbench/: CARD.md  README.md  build_tasks.py  run_comparison.py  tasks.jsonl
datasets/openworld-corp/: CARD.md  README.md  corpus.json  generate_corpus.py  org.py
datasets/openworld-diagnosis/: CARD.md  generate.py
datasets/openworld-football/: README.md
datasets/openworld-market/: CARD.md  README.md  com.openworld.dailysignal.plist  daily_signal.py  prices.csv  (+2 more)
docs/: how-openworld-solves-with-zero-data.md
examples/: autotune_triage.py  dag_perception.py  intake_world.py  manyworlds_assumption_test.py  morality_sweep.py  orchard.py  preterm_sdoh_world.py  sdoh_world.py  worldcup2026.py  worldcup_benchmark.py  worldcup_history.py
experiments/: MANIFEST.md  _adapter_ckpt.py  arc3_graph.py  arc3_gym.py  arc3_sandbox.py  arc3_world.py  arc_synthesizer_harness.py  blocksworld.py  cartpole_world.py  collect_arc3_trans.py  common.py  dc22_v3_candidate.py  e01_fidelity.py  e02_synthesis.py  e03_verifier_ablation.py  e04_rollout_speed.py  e05_codefix_agent.py  e06_judge_selection.py  e07_judge_alignment.py  e08_morality_pareto.py  e09_tuning_efficiency.py  e100_typed_solver.py  e101_model_solver.py  e102_goal_search.py  e103_hypothesis_solver.py  e104_bayesian_subworld.py  e105_visual_solver.py  e106_vision_world.py  e107_graph_explore.py  e108_salience_explore.py  e109_consensus_explore.py  e10_ood_generalization.py  e110_fast_click.py  e111_click_graph.py  e112_arc_simulator.py  e113_multiperception.py  e114_chaining.py  e116_router.py  e117_random_baseline.py  e118_qwen_agent.py  (+191 more)
gallery/: README.md  hospital-network.json  nation.json  orchard.json  sprint.json  triage.json
notebooks/: quickstart.ipynb
openworld/: __init__.py  _tmux.py  agent.py  bench.py  card.py  cli.py  coding.py  compose.py  consensus.py  contextbench.py  dag.py  ethics.py  gym_env.py  infogeom.py  intervals.py  judge.py  llm.py  manyworlds.py  memory.py  objectives.py  optimize.py  parsing.py  pathintegral.py  perceive.py  repairbench.py  reward.py  sandbox.py  serve.py  sheaf.py  simulation.py  spec.py  state.py  swebench.py  transition.py  transport.py  tune.py  verify.py  wavelets.py  world.py
paper/: Makefile  NOTE-TO-JIM-2026-06-16.md  REACHABLE-OOD-AUDIT-2026-06-16.md  main.tex  numbers.tex  refs.bib
papers/: .gitignore  ARXIV_SUBMISSION.md  README.md
presentations/: README.md  build_decks.py
recipes/: README.md  owcb-contextbench-v1.json  owrb-atomic-v1.json  owrb-staged-v1.json  owsb-atomic-v1.json  owsb-staged-v1.json
scratch_balrog/: TASK.md  baba_harness.py  balrog_solver.py  run_suite.py
scripts/: arc_experts.py  audit_network_tools.py  audit_sandbox.py  autobank_arc.py  autobank_sourcefree.py  autobank_watch.sh  backfill_env_version.py  backfill_tokens.py  bank_from_runs.py  build_arc3_arm_maps.py  build_arc3_board_gallery.py  build_arc3_fable_maps.py  build_arc3_fullgame.py  build_discovery_cost.py  build_paper_recipes.py  capture_arc_run.py  capture_lib.py  codex_metrics.py  execute_arc_probe_quiet.py  finalize_traces.py  make_arc3_aboverandom_fig.py  make_arc3_anatomy_fig.py  make_arc3_animations.py  make_arc3_architecture_fig.py  make_arc3_assets.py  make_arc3_codefig.py  make_arc3_example_fig.py  make_arc3_gifs.py  make_arc3_procedure_fig.py  make_arc3_replay_figs.py  make_arc3_scaling.py  make_arc3_selfrebuild_fig.py  make_arc3_strategy_figs.py  make_deck_charts.py  make_e119_strategy_fig.py  make_e124_flow_fig.py  make_forming_figure.py  make_manifest.py  make_paper_assets.py  make_qr.py  (+46 more)
specs/: intake.json
tests/: conftest.py  test_assumption_test.py  test_audit_knowledge.py  test_bench.py  test_branch_gate.py  test_bridging.py  test_bridging_conditions_c.py  test_bridging_policy.py  test_bridging_simulation.py  test_card.py  test_catan_board.py  test_catan_conditions.py  test_catan_game.py  test_catan_personas.py  test_catan_pilot.py  test_catan_policy.py  test_cli.py  test_coding.py  test_compose.py  test_contextbench.py  test_core.py  test_dag.py  test_e119_abstain.py  test_e119_macro.py  test_e119_perceive.py  test_e119_planner.py  test_e119_proxy.py  test_e119_slm.py  test_e119_solve.py  test_e119_sweep.py  test_e119_world.py  test_e124_capture.py  test_e124_goalc.py  test_e124_iso.py  test_e124_sandbox.py  test_e124_search.py  test_e125_agent.py  test_e125_claude_iso.py  test_e125_collect_obj.py  test_e125_ensemble.py  (+49 more)
tutorials/: README.md  benchmark_dataset.md  benchmark_dataset.py  finance_portfolio.md  finance_portfolio.py  from_scikit_learn.md  from_scikit_learn.py  healthcare_triage.md  healthcare_triage.py  legaltech_settlement.md  legaltech_settlement.py  multimodal_perception.md  multimodal_perception.py  software_engineering_sprint.md  software_engineering_sprint.py
(+3605 files in other folders)
