[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openworld"
version = "0.3.0"
description = "Build, optimize, and deploy verified symbolic world models."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Jim Schwoebel" }]
keywords = ["world-models", "ollama", "simulation", "agents", "neuro-symbolic"]
# Targets Python 3.14 (faster-CPython, security/stdlib hardening; the .python-version
# pin, CI, and the Docker image all use it). The floor stays at 3.9 because the code is
# 3.9-compatible and the cached experiment results were generated there -- nothing is
# lost by keeping installs broad while running on 3.14.
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
]
# The core library (`import openworld`) is zero-dependency and never imports these.
# They power the optional serve/CLI layer (openworld.serve / openworld.cli), which
# deliver the build/optimize/deploy experience out of the box.
dependencies = [
    "fastapi>=0.95",
    "uvicorn>=0.20",
    "click>=8",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.23"]
# Lint/type gate (pinned for reproducible CI results).
lint = ["ruff==0.15.18", "mypy==2.1.0"]
optuna = ["optuna>=3"]
# numpy is NOT a core dependency: the numpy-backed analysis extras (wavelets,
# sheaf gluing, information geometry, optimal transport) import it lazily, so
# `import openworld` stays stdlib-only. Install this extra to use those modules.
analysis = ["numpy>=1.24"]
# Gymnasium adapter (openworld.gym_env.OpenWorldEnv): wrap a verified World as a gym.Env for
# existing planners / RL libraries. Optional; the core stays stdlib-only.
gym = ["gymnasium>=0.29", "numpy>=1.24"]
# Reproduce the paper: run the experiment scripts and regenerate every
# figure/table/number via scripts/make_paper_assets.py.
experiments = ["numpy>=1.24", "matplotlib>=3.6"]

[project.urls]
Homepage = "https://github.com/quome-cloud/openworld"
Repository = "https://github.com/quome-cloud/openworld"
Issues = "https://github.com/quome-cloud/openworld/issues"

[project.scripts]
openworld = "openworld.cli:main"

[tool.setuptools.packages.find]
include = ["openworld*"]

[tool.setuptools.package-data]
openworld = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
# Start with the high-signal rules (real bugs: undefined names, unused
# imports/vars, syntax errors). Style rules (E7xx, line length) can be added later.
select = ["F", "E9"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

# Modules not yet type-clean are excluded so the gate enforces the clean ones and
# fails on regressions there. Shrink this list over time, don't grow it.
[[tool.mypy.overrides]]
module = [
    "openworld.intervals",
    "openworld.llm",
    "openworld.agent",
    "openworld.world",
    "openworld.compose",
    "openworld.spec",
    "openworld.card",
    "openworld.sheaf",
    "openworld.gym_env",
    "openworld.tune",
]
ignore_errors = true
